# neuroMCP

./: .gitignore  README.md  pyproject.toml
docs/: demo-script.md  neuromcp.md
docs/superpowers/plans/: 2026-06-13-neuromcp-implementation.md  2026-06-13-neuromcp-parallel-execution.md
docs/superpowers/specs/: 2026-06-13-neuromcp-design.md
notebooks/: 01_preprocessing.ipynb  02_training.ipynb  03_calibration.ipynb
scripts/: screen_subjects.py
src/demo/: agent.py
src/models/: eegnet.py  mc_dropout.py  train.py
src/preprocessing/: buffer.py  pipeline.py  streaming.py
src/server/: schemas.py  server.py
tests/: test_buffer.py  test_decoder.py  test_preprocessing.py  test_server.py
