[project]
name = "neuromcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mne>=1.6",
    "numpy>=1.26",
    "torch>=2.1",
    "fastmcp>=0.4",
    "pydantic>=2.0",
    "anthropic>=0.25",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
